--- a/style.css
+++ b/style.css
@@ -3,33 +3,28 @@ body{
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: 100%;
     margin: 0;
+    
+
 
 }
 
 
 /*=====================header================================================*/
-.tag
-    {
-     color:#FF7F01;
-   font-family:irish grover ;
-   text-decoration: none;
-   padding: 15px;
-  
-  
 
-    }
   
 .navbar
 {
+
+    
    
     display: flex;
+    
+    
     justify-content: space-between;  /* controls left right axis */
     align-items: center;              
     background-color: black;
-    
-   
-    width: 100%;
     border-radius: 15px;
     
 
@@ -52,11 +47,16 @@ body{
 }
 .navbar li
 {
-    color: #FF7F01;
-    font-family: irish grover;
-    text-decoration: none;
+    white-space: nowrap;/* about us doesnt split up*/
     padding: 5px;
     
+}
+
+.navbar li a
+{
+     color: #FF7F01;
+    font-family: irish grover;
+    text-decoration: none;
 }
 
 
@@ -66,6 +66,7 @@ body{
     display: flex;/*line up items auto*/
     gap: 25px;
     align-items: center;
+    padding-left: 15px;
 
     
    
@@ -95,7 +96,7 @@ body{
 .logo
 {
     height: 40px;
-    margin-left: 10px;
+    margin-left: 0;
 }
 
 
@@ -103,7 +104,7 @@ body{
 /*=====================footer================================================*/
 
 footer{
-    position: fixed;
+    position:relative;
     bottom: 0;
     background-color:rgb(0, 0, 0);
     height: 150px;
@@ -181,6 +182,7 @@ transform: translate(-50%, -50%);
 
 .design 
 {
+    box-sizing: border-box;
     font-size: 250px;
     font-weight: bolder;
     font-family:Alfa Slab One;
@@ -198,7 +200,7 @@ transform: translate(-50%, -50%);
         text-align: center;
 }
 
-
+/*===========================all by us==========================*/
 .design1
 {
     position: relative;
@@ -209,4 +211,42 @@ transform: translate(-50%, -50%);
 main{
     flex: 1;
 }
+
+
+*{
+    box-sizing: border-box;
+}
+.column
+{
+    position:relative;/*text can move with it*/
+    float:left;
+    width:33.33%;
+    
+    
+}
+
+.row::after
+{
+content:"";
+display:table;
+clear:both;
+}
+
+.text
+{
+    top: 100px;
+    left:50%;
+    
+
+color: white;
+
+font-size: 40px;
+text-align:center;
+margin-top: 20%;
+
+z-index: 10;/*bringing to front*/
+
+
+}
+
 
