wrong page removed
product list page removed and product detail set

--- a/style.css
+++ b/style.css
@@ -314,91 +314,4 @@ z-index: 10;/*bringing to front*/
 }
 
 
-/*=============product listing page=============*/
-
-/* MAIN CONTAINER */
-.store-container {
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    gap: 30px;
-    padding: 20px 40px;
-    background-color: #7e6b64;
-    font-family: "Poppins", sans-serif;
-}
-
-/* FILTER PANEL */
-.filters {
-    background: #d9d9d9;
-    padding: 20px;
-    border-radius: 10px;
-    
-}
-
-.filters h2 {
-    margin-bottom: 15px;
-    font-size: 22px;
-}
-
-.filters label {
-    display: block;
-    margin-top: 15px;
-    font-weight: 600;
-}
-
-.filters select {
-    width: 100%;
-    padding: 8px;
-    margin-top: 5px;
-    border-radius: 5px;
-    border: 1px solid #aaa;
-}
-
-/* PRODUCT GRID */
-.product-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 35px;
-}
-
-/* PRODUCT CARD */
-.product-card {
-    background: transparent;
-    text-align: center;
-    color: #000;
-}
-
-.img-box {
-    width: 100%;
-    height: 330px;
-    border-radius: 10px;
-    overflow: hidden;
-    border: 4px solid #ffc600;
-}
-
-.img-box img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.product-card h3 {
-    margin-top: 10px;
-    font-size: 18px;
-    font-weight: 700;
-}
-
-.stars {
-    margin-top: 5px;
-    color: #ffcc00;
-    font-size: 20px;
-}
-
-/* RESPONSIVE */
-@media (max-width: 900px) {
-    .store-container {
-        grid-template-columns: 1fr;
-    }
-    .product-grid {
-        grid-template-columns: 1fr;
-    }
-}
+/*=============product detail page========*/
