--- a/style.css
+++ b/style.css
@@ -315,3 +315,45 @@ z-index: 10;/*bringing to front*/
 
 
 /*=============product detail page========*/
+.productpage
+{
+    width: 100;
+    background-color: #8b7a73 ;
+    padding: 40px 60px;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.productcontainer
+{
+    display: flex;
+    gap: 40px;
+}
+
+.productimages
+{
+    width: 45%;
+
+}
+
+.largeimage
+{
+    display: flex;
+    gap: 15px;
+    margin-top: 20px;
+    
+    width: 300px;
+    height: auto;
+    border-radius: 30px;
+}
+
+.moreimage img
+{
+    margin-top: 10px;
+    width: 90px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 8px;
+    cursor: pointer;
+}
