--- a/style.css
+++ b/style.css
@@ -357,3 +357,44 @@ z-index: 10;/*bringing to front*/
     border-radius: 8px;
     cursor: pointer;
 }
+
+.info
+{
+width: 50%;
+color: #fff;
+}
+
+.title
+{
+font-family: 'Alfa Slab One', serif;
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+.code
+{
+color: #ccc;
+    margin-bottom: 20px;
+}
+
+.price
+{
+font-size: 26px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.model
+{
+margin: 10px 0;
+}
+.description
+{
+margin: 10px 0 20px 20px;
+}
+
+.stock
+{
+color: #caffb6;
+    margin-bottom: 20px;
+}
