--- a/uniquefeature.css
+++ b/uniquefeature.css
@@ -1,10 +1,7 @@
-body {
-  background-color: rgb(135, 120, 115);
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-  margin: 0;
+
+    body {
+    background-image: url('images/background\ unique\ feature.png'); 
+   
 }
 
 /*=====================header================================================*/
@@ -242,232 +239,9 @@ footer .copyright {
 }
 
 
-/*=========================ballers basket design============*/
-
-.design 
-{
-    box-sizing: border-box;
-    font-size: 250px;
-    font-weight: bolder;
-    font-family:Alfa Slab One;
-    letter-spacing: -7px ;
-    line-height: 0.9 ;
-    background: url(basketballbackground.png) 50% 50%;
-    background-size: cover;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip:text;
-
-     position: absolute;
-     top: 16%;
-    left: 10%;
-    transform: translate(-10%, -50%);
-        text-align: center;
-}
-
-/*===========================all by us==========================*/
-.design1
-{
-    position: relative;
-    text-align: center;
-    margin-top: 450px;
-}
-
-main{
-    flex: 1;
-}
-
-
-*{
-    box-sizing: border-box;
-}
-.column
-{
-    position:relative;/*text can move with it*/
-    float:left;
-    width:33.33%;
-    
-    
-}
-
-.row::after
-{
-content:"";
-display:table;
-clear:both;
-}
-
-.text
-{
-    top: 60px;
-    left:50%;
-    
-
-color: white;
-
-font-size: 40px;
-text-align:center;
-margin-top: 20%;
-
-z-index: 10;/*bringing to front*/
-
-
-}
-
-
-/*=============product detail page========*/
-.productpage
-{
-    width: 100;
-    background-color: #8b7a73 ;
-    padding: 40px 60px;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-
-.productcontainer
-{
-    display: flex;
-    gap: 40px;
-}
-
-.productimages
-{
-    width: 45%;
-
-}
-
-.largeimage
-{
-    display: flex;
-    gap: 15px;
-    margin-top: 90px;
-    
-    width: 500px;
-    height: auto;
-    border-radius: 30px;
-}
-
-.moreimage img
-{
-    margin-top: 30px;
-    width: 90px;
-    height: auto;
-    object-fit: cover;
-    border-radius: 8px;
-    cursor: pointer;
-    
-}
-
-.info
-{
-width: 50%;
-color: #fff;
-}
-
-.title
-{
-font-family: 'Alfa Slab One', serif;
-    font-size: 40px;
-    margin-bottom: 10px;
-}
-
-.code
-{
-color: #ccc;
-    margin-bottom: 20px;
-}
-
-.price
-{
-font-size: 26px;
-    font-weight: bold;
-    margin-bottom: 20px;
-}
-
-.model
-{
-margin: 10px 0;
-}
-.description
-{
-margin: 10px 0 20px 20px;
-}
-
-.stock
-{
-color: #caffb6;
-    margin-bottom: 20px;
-}
-
-/*buttons  */
-.buy {
-    width: 260px;
-    padding: 14px;
-    font-size: 16px;
-    border-radius: 8px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    border: none;
-
-
-}
-.addtocart
-{
-    width: 260px;
-    padding: 14px;
-    font-size: 16px;
-    border-radius: 8px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    border: none;
-}
-
-.addtocart{
-    background-color: #000;
-    color: white;
-}
-
-.buy {
-    background-color: #e8e8e8;
-    color: #333;
-}
-
-/* you may like box */
-.suggestions {
-    background-color: #000000;
-    border-radius: 15px ;
-    margin-top: 20px;
-    display: flex;
-    gap: 20px;
-    width: 350px ;
-
-    justify-content: center;
-    
-    
-    
-}
-
-.suggestions img {
-    width: 150;
-    height: 150px;
-    object-fit: cover;
-    padding:15px;
-   
-}
-.buttons
-{
-    display: flex;
-    flex-direction: column;
-}
-
 /*========================SELLPAGE==============================*/
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f7f7f7;
-}
+
+
 
 .maincontainer {
     width: 100%;
@@ -501,6 +275,8 @@ body {
 .upload:hover {
     background-color: #e2e2e2;
 }
+
+
 
 .otherphotos {
     display: flex;
