--- a/loginfeature.css
+++ b/loginfeature.css
@@ -1,6 +1,8 @@
   body {
     background-image: url('images/loginbackground.png'); 
    
+
+   
 }
 
 /*=====================header================================================*/
@@ -236,3 +238,129 @@ footer .copyright {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+
+/*==================LOGIN FEATURES=================== */
+
+
+
+.login
+{
+    width: 100%;
+max-width: 420px;
+color: #fff;
+
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+min-height: 100vh;
+border-radius: 10px;
+padding: 30px 40px;
+
+
+
+}
+
+
+
+.login h1{
+    font-size: 36px ;
+    text-align: center;
+
+}
+
+.login .inputbox
+{
+width: 100%;
+height: 50px ;
+margin: 30px;
+}
+
+.inputbox input
+{
+width: 100%;
+height: 100%;
+background-color: transparent;
+border: none;
+outline: none;
+border: 2px solid rgba(255,255,255, .2);
+border-radius: 40px;
+font-size: 16px;
+color:#fff;
+padding: 10px 40px 10px 10px;
+
+}
+
+.login .remember-forgot
+{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+    display: block;
+    margin:50px;
+
+
+}
+
+
+
+.remember-forgot label input
+{
+    accent-color: #fff;
+    margin-right: 3px;
+
+}
+
+
+
+.remember-forgot a:hover{
+    text-decoration: underline;
+}
+
+.login .btn
+{
+    width: 100%;
+    height:45px;
+    background-color: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgb(0, 0, 0);
+    cursor: pointer;
+    font-size:16px;
+    color: #333;
+    font-weight: 600;
+
+    margin-left: 50px;
+
+
+
+    
+}
+
+.login .registerlink
+{
+    font-size: 14.5px;
+    
+    text-align: center;
+    margin-top: 20px;
+    margin: 20px 0 15px;
+
+}
+
+.login .registerlink p a{
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    
+    
+
+}
+
+
+.login .registerlink p a:hover{
+
+text-decoration: underline;}
+
